made changes for pull request

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
             </ul>
           </div>
           <div>
-            <h2>Адрес</h2>
+            <h2 class="address">Адрес</h2>
             <p>
               Краснодарский Край,<br />
               город Славянск-На-Кубани<br />
