--- a/index.html
+++ b/index.html
@@ -120,8 +120,13 @@
               alt="decorative section img"
               class="decoration__img"
             />
-            <div class="decoration__greenBlock">
-              <h2 class="decorative__text">Деньги под залог ценных вещей</h2>
+            <div class="greenBlockContainer">
+              <div class="decoration__greenBlock">
+                <h2 class="decorative__text">
+                  Деньги под залог<br />
+                  ценных вещей
+                </h2>
+              </div>
             </div>
           </div>
         </div>
@@ -214,32 +219,82 @@
               Основные преимущества компании<br />
               Ломбард “Радуга”
             </h2>
-            <ul class="Adventages__list">
-              <li>
-                Работа ведётся в соответствии с требованиями ФЗ «О ломбардах» и
-                нормативами Центробанка РФ.
-              </li>
-              <li>
-                ООО Ломбард «Радуга» зарегистрировано в государственном реестре
-                ломбардов при ЦБ РФ.
-              </li>
-              <li>
-                Предлагаем выгодные процентные ставки и высокую оценку
-                залогового имущества.
-              </li>
-              <li>
-                Постоянным клиентам обеспечен индивидуальный и лояльный подход.
-              </li>
-              <li>В штате работают специалисты с высокой квалификацией.</li>
-              <li>
-                У компании устойчивая деловая репутация на российском рынке
-                финансовых услуг.
-              </li>
-              <li>
-                Мы строго соблюдаем конфиденциальность данных при взаимодействии
-                с клиентами.
-              </li>
-            </ul>
+            <div class="Adventages__list">
+              <div class="diamomd__container">
+                <img
+                  src="./assets/images/Green diamond.png"
+                  alt="Green diamond"
+                  class="diamond"
+                />
+                <p>
+                  Работа ведётся в соответствии с требованиями ФЗ «О ломбардах»
+                  и нормативами Центробанка РФ.
+                </p>
+              </div>
+              <div class="diamomd__container">
+                <img
+                  src="./assets/images/Green diamond.png"
+                  alt="Green diamond"
+                  class="diamond"
+                />
+                <p>
+                  ООО Ломбард «Радуга» зарегистрировано в государственном
+                  реестре ломбардов при ЦБ РФ.
+                </p>
+              </div>
+              <div class="diamomd__container">
+                <img
+                  src="./assets/images/Green diamond.png"
+                  alt="Green diamond"
+                  class="diamond"
+                />
+                <p>
+                  Предлагаем выгодные процентные ставки и высокую оценку
+                  залогового имущества.
+                </p>
+              </div>
+              <div class="diamomd__container">
+                <img
+                  src="./assets/images/Green diamond.png"
+                  alt="Green diamond"
+                  class="diamond"
+                />
+                <p>
+                  Постоянным клиентам обеспечен индивидуальный и лояльный
+                  подход.
+                </p>
+              </div>
+              <div class="diamomd__container">
+                <img
+                  src="./assets/images/Green diamond.png"
+                  alt="Green diamond"
+                  class="diamond"
+                />
+                <p>В штате работают специалисты с высокой квалификацией.</p>
+              </div>
+              <div class="diamomd__container">
+                <img
+                  src="./assets/images/Green diamond.png"
+                  alt="Green diamond"
+                  class="diamond"
+                />
+                <p>
+                  У компании устойчивая деловая репутация на российском рынке
+                  финансовых услуг.
+                </p>
+              </div>
+              <div class="diamomd__container">
+                <img
+                  src="./assets/images/Green diamond.png"
+                  alt="Green diamond"
+                  class="diamond"
+                />
+                <p>
+                  Мы строго соблюдаем конфиденциальность данных при
+                  взаимодействии с клиентами.
+                </p>
+              </div>
+            </div class="diamomd__container">
             <p class="Adventages__bottomText">
               Компания принимает в залог золото любых проб, в любом состоянии, в
               частности 375, 583, 585, 750, 850, 900, 999
@@ -251,16 +306,16 @@
     <footer class="footer">
       <div class="wrapper wrapper_max">
         <div class="footer__container">
-          <div class="footer__logoContainer">
+          <div class="footer__logoContainer" style="margin-right: 39px;">
             <h2 class="footer__logo">Ломбард “Радуга”</h2>
             <p>
               Краткосрочный заём под залог ювелирных<br />
               украшений предоставляется при наличии<br />
-              документа, подтверждающего личность заемщика.
+              документа, подтверждающего личность<br> заемщика.
             </p>
           </div>
           <div class="footer__listsContainer">
-            <h2>Быстрые Ссылки</h2>
+            <h2 class="quick__links">Быстрые Ссылки</h2>
             <ul class="footer__list">
               <li><a href="#">Главная</a></li>
               <li><a href="#">Продукты</a></li>
@@ -280,7 +335,7 @@
             <a href="tel:+79184897429" class="phoneNumber">+7 918 489 7429</a>
           </div>
           <div class="schedule__container">
-            <h2>Расписание</h2>
+            <h2 class="scheduleTitle">Расписание</h2>
             <div class="schedule">
               <p>Пн - выходной</p>
               <p>В будние дни - С 9 до 16</p>
